# minecraft_raytraced

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  callgrind.out.294483  callgrind.out.297600  callgrind.out.348227  cmake.sh  gradient.asm  imgui.ini
.github/workflows/: cmake-single-platform.yml
cmake/modules/: FindASSIMP.cmake
include/mc/: asserts.hpp  assetloader.hpp  camera.hpp  defines.hpp  event_manager.hpp  event_queue.hpp  events.hpp  exceptions.hpp  input_manager.hpp  key.hpp  logger.hpp  mouse_buttons.hpp  random_gen.hpp  timer.hpp  utils.hpp  window.hpp
include/mc/formatters/: glm_types.hpp
include/mc/game/: game.hpp  loop.hpp
include/mc/renderer/: render.hpp  renderer.hpp
include/mc/renderer/backend/: allocator.hpp  backend_renderer.hpp  buffer.hpp  command.hpp  constants.hpp  descriptor.hpp  device.hpp  framebuffers.hpp  gltfloader.hpp  image.hpp  info_structs.hpp  instance.hpp  material.hpp  mesh.hpp  mesh_buffers.hpp  mesh_loader.hpp  mesh_upload.hpp  pipeline.hpp  render.hpp  render_pass.hpp  renderer_backend.hpp  resource.hpp  surface.hpp  swapchain.hpp  ubo.hpp  utils.hpp  vertex.hpp  vk_checker.hpp  vk_result_messages.hpp  vma.hpp
lib/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
lib/stb/: CMakeLists.txt
res/blendercube/: untitled.gltf
res/models/: cube.glb  untitled.glb  untitled.gltf  viking_room.mtl
res/models/backpack/: backpack2.mtl
res/shaders/: gradient.comp  main.frag  main.vert
shaders/: colored_triangle.frag  colored_triangle.vert  fs.frag  gradient_color.comp  input_structures.glsl  main.frag  main.vert  sky.comp  textureless.frag  uniforms.glsl  vs.vert
src/: assetloader.cpp  camera.cpp  key.cpp  logger.cpp  main.cpp  timer.cpp  utils.cpp  window.cpp
src/game/: game.cpp  loop.cpp
src/renderer/: render.cpp  renderer.cpp
src/renderer/backend/: allocator.cpp  backend_renderer.cpp  buffer.cpp  command.cpp  descriptor.cpp  device.cpp  framebuffers.cpp  gltfloader.cpp  image.cpp  instance.cpp  material.cpp  mesh.cpp  mesh_loader.cpp  mesh_upload.cpp  pipeline.cpp  render.cpp  render_pass.cpp  renderer_backend.cpp  surface.cpp  swapchain.cpp  utils.cpp  vk_checker.cpp  vma.cpp
